--- a/SitecoreCDPSln/src/Foundation/Serialization/code/SitecoreCDP.Foundation.Serialization.csproj
+++ b/SitecoreCDPSln/src/Foundation/Serialization/code/SitecoreCDP.Foundation.Serialization.csproj
@@ -100,7 +100,7 @@
     <Content Include="App_Config\Include\Unicorn\Unicorn.CustomSerializationFolder.config.example" />
     <Content Include="App_Config\Include\Unicorn\Unicorn.Configs.NewItemsOnly.example" />
     <Content Include="App_Config\Include\Unicorn\Unicorn.Configs.Dependency.config.example" />
-    <Content Include="App_Config\Include\Unicorn\Unicorn.Configs.Default.example" />
+    <None Include="App_Config\Include\Unicorn\Unicorn.Configs.Default.config" />
     <Content Include="App_Config\Include\Unicorn\Unicorn.config" />
     <Content Include="App_Config\Include\Unicorn\Unicorn.AutoPublish.config" />
     <None Include="Web.config" />
