unicorn config name modified

--- a/SitecoreCDPSln/src/Foundation/Serialization/code/App_Config/Include/Unicorn/Unicorn.Configs.Default.config
+++ b/SitecoreCDPSln/src/Foundation/Serialization/code/App_Config/Include/Unicorn/Unicorn.Configs.Default.config
@@ -2,7 +2,7 @@
 	<sitecore>
 		<unicorn>
 			<configurations>
-				<configuration name="Feature.Sample" description="Write something here about why this configuration exists and what it's for. Or remove the attribute; it's optional.">
+				<configuration name="Foundation.Serialization" description="Write something here about why this configuration exists and what it's for. Or remove the attribute; it's optional.">
 					<predicate>
 						<include name="Layouts" database="master" path="/sitecore/layout/Layouts/sitecorecdp" />
 						<include name="Templates" database="master" path="/sitecore/templates/sitecorecdp" />
