configuration for unicorn changes

--- a/SitecoreCDPSln/src/Foundation/Serialization/code/App_Config/Include/Unicorn/Unicorn.Configs.Default.config
+++ b/SitecoreCDPSln/src/Foundation/Serialization/code/App_Config/Include/Unicorn/Unicorn.Configs.Default.config
@@ -3,6 +3,7 @@
 		<unicorn>
 			<configurations>
 				<configuration name="Foundation.Serialization" description="Write something here about why this configuration exists and what it's for. Or remove the attribute; it's optional.">
+					<targetDataStore physicalRootPath="C:\Code\sitecoremvccdp\SitecoreCDPSln\src\Foundation\Serialization\unicorn" />
 					<predicate>
 						<include name="Layouts" database="master" path="/sitecore/layout/Layouts/sitecorecdp" />
 						<include name="Templates" database="master" path="/sitecore/templates/sitecorecdp" />
