more changes for adding cdp layout

--- a/SitecoreCDPSln/src/Foundation/Serialization/code/App_Config/Include/Unicorn/Unicorn.Configs.Default.config
+++ b/SitecoreCDPSln/src/Foundation/Serialization/code/App_Config/Include/Unicorn/Unicorn.Configs.Default.config
@@ -8,6 +8,7 @@
 						<include name="Layouts" database="master" path="/sitecore/layout/Layouts/Project/sitecorecdp" />
 						<include name="Templates" database="master" path="/sitecore/templates/Project/sitecorecdp" />
 						<include name="Renderings" database="master" path="/sitecore/layout/Renderings/Project/sitecorecdp" />
+						<include name="Placeholders" database="master" path="/sitecore/layout/Placeholder Settings/Project/sitecorecdp" />
 						<include name="Content" database="master" path="/sitecore/content/sitecorecdp" />
 					</predicate>
 					<dataProviderConfiguration enableTransparentSync="false" />
