--- a/SitecoreCDPSln/src/Feature/Components/code/Views/web.config
+++ b/SitecoreCDPSln/src/Feature/Components/code/Views/web.config
@@ -16,7 +16,9 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="code" />
+        <add namespace="SitecoreCDP.Feature.Components" />
+		<add namespace="Sitecore.Mvc"/>
+		<add namespace="Sitecore.Mvc.Analytics"/>		  
       </namespaces>
     </pages>
   </system.web.webPages.razor>
