--- a/SitecoreCDPSln/src/Foundation/Integrations/code/Views/web.config
+++ b/SitecoreCDPSln/src/Foundation/Integrations/code/Views/web.config
@@ -16,7 +16,9 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="code" />
+	    <add namespace="SitecoreCDP.Foundation.Integrations" />
+	    <add namespace="Sitecore.Mvc"/>
+	    <add namespace="Sitecore.Mvc.Analytics"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
