--- a/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Layouts/sitecorecdp/CDP Layout.yml
+++ b/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Layouts/sitecorecdp/CDP Layout.yml
@@ -7,8 +7,7 @@ DB: master
 SharedFields:
 - ID: "a036b2bc-ba04-44f6-a75f-bae6cd242abf"
   Hint: Path
-  Value: |
-    ~\Views\_maincdplayout.cshtml
+  Value: /Views/_maincdplayout.cshtml
 Languages:
 - Language: en
   Versions:
