--- a/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Renderings/sitecorecdp/homehero.yml
+++ b/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Renderings/sitecorecdp/homehero.yml
@@ -4,6 +4,13 @@ Parent: "73baf23f-f824-43c5-87e5-75a52d3e724a"
 Template: "2a3e91a0-7987-44b5-ab34-35c2d9de83b9"
 Path: /sitecore/layout/Renderings/Project/sitecorecdp/homehero
 DB: master
+SharedFields:
+- ID: "ded9e431-3604-4921-a4b3-a6ec7636a5b6"
+  Hint: Controller Action
+  Value: Index
+- ID: "e64ad073-dfcc-4d20-8c0b-fe5aa6226cd7"
+  Hint: Controller
+  Value: SitecoreCDP.Feature.Components.Controllers.HomeHeroController,SitecoreCDP.Feature.Components
 Languages:
 - Language: en
   Versions:
