--- a/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Templates/sitecorecdp/home/__Standard Values.yml
+++ b/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Templates/sitecorecdp/home/__Standard Values.yml
@@ -12,6 +12,20 @@ SharedFields:
     {2FCDC739-F535-40CB-AF2B-C7EDD0B0DDC5}
     {4EEE653B-2D07-439E-8358-1DA97C3895CB}
     {21A67B50-25E1-4E6B-B2DB-C82BFE7A04BD}
+- ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
+  Hint: __Renderings
+  Type: layout
+  Value: |
+    <r xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+      <d
+        id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}"
+        l="{FBEE9FC8-9CD8-42EC-B04B-6C7A17B574C6}">
+        <r
+          id="{F8096F74-F536-43E8-83C4-91F422BDAC3F}"
+          ph="cdp-main"
+          uid="{2044B2A4-FB14-4DF7-9BB0-4A06CA5237A5}" />
+      </d>
+    </r>
 Languages:
 - Language: en
   Versions:
