--- a/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Templates/sitecorecdp/tabpage/__Standard Values.yml
+++ b/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Templates/sitecorecdp/tabpage/__Standard Values.yml
@@ -12,6 +12,20 @@ SharedFields:
     {2FCDC739-F535-40CB-AF2B-C7EDD0B0DDC5}
     {4EEE653B-2D07-439E-8358-1DA97C3895CB}
     {21A67B50-25E1-4E6B-B2DB-C82BFE7A04BD}
+- ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
+  Hint: __Renderings
+  Type: layout
+  Value: |
+    <r xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+      <d
+        id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}"
+        l="{FBEE9FC8-9CD8-42EC-B04B-6C7A17B574C6}">
+        <r
+          id="{35D62812-5DC9-4DBD-BA45-EE74E2009040}"
+          ph="cdp-main"
+          uid="{589735D0-8D54-4532-BC79-35F3047B3734}" />
+      </d>
+    </r>
 Languages:
 - Language: en
   Versions:
