--- a/SitecoreCDPSln/src/Project/Website/code/packages.config
+++ b/SitecoreCDPSln/src/Project/Website/code/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootstrap" version="5.1.3" targetFramework="net48" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net48" />
   <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net48" />
   <package id="EnterpriseLibrary.TransientFaultHandling.Caching" version="6.0.1304.0" targetFramework="net48" />
@@ -8,6 +9,7 @@
   <package id="EnterpriseLibrary.TransientFaultHandling.ServiceBus" version="6.0.1304.0" targetFramework="net48" />
   <package id="EnterpriseLibrary.TransientFaultHandling.WindowsAzure.Storage" version="6.0.1304.0" targetFramework="net48" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net48" />
+  <package id="jQuery" version="3.6.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.6" targetFramework="net48" />
