--- a/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Renderings/sitecorecdp/sampletest.yml
+++ b/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Renderings/sitecorecdp/sampletest.yml
@@ -4,6 +4,10 @@ Parent: "73baf23f-f824-43c5-87e5-75a52d3e724a"
 Template: "99f8905d-4a87-4eb8-9f8b-a9bebfb3add6"
 Path: /sitecore/layout/Renderings/Project/sitecorecdp/sampletest
 DB: master
+SharedFields:
+- ID: "51b435bc-f7b9-478a-9c51-52916af96ff5"
+  Hint: Path
+  Value: /Views/sampletest.cshtml
 Languages:
 - Language: en
   Versions:
