--- a/SitecoreCDPSln/src/Foundation/Integrations/code/packages.config
+++ b/SitecoreCDPSln/src/Foundation/Integrations/code/packages.config
@@ -15,7 +15,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.Base" version="1.0.2" targetFramework="net48" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.Environment" version="1.0.2" targetFramework="net48" />
@@ -50,13 +50,16 @@
   <package id="Sitecore.Web" version="10.2.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net48" />
-  <package id="System.Memory" version="4.5.2" targetFramework="net48" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Xml" version="4.5.0" targetFramework="net48" />
   <package id="System.Security.Permissions" version="4.5.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="6.0.5" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="WebActivatorEx" version="2.0.3" targetFramework="net48" />
 </packages>
