--- a/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Templates/sitecorecdp/contentpage/__Standard Values.yml
+++ b/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Templates/sitecorecdp/contentpage/__Standard Values.yml
@@ -21,6 +21,10 @@ SharedFields:
         id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}"
         l="{FBEE9FC8-9CD8-42EC-B04B-6C7A17B574C6}">
         <r
+          id="{E89188B6-C05E-4BF4-A484-F8C6124342CF}"
+          ph="cdp-main"
+          uid="{E732C3F3-C176-4A6F-BA7B-3392B2013F68}" />
+        <r
           id="{1C626537-5F75-4A2B-8300-E9AA568F5253}"
           ph="cdp-main"
           uid="{70842A7D-97FB-4AA0-BCE3-EEB239D37EA4}" />
