--- a/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Templates/sitecorecdp/home/__Standard Values.yml
+++ b/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Templates/sitecorecdp/home/__Standard Values.yml
@@ -22,6 +22,10 @@ SharedFields:
         id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}"
         l="{FBEE9FC8-9CD8-42EC-B04B-6C7A17B574C6}">
         <r
+          id="{E89188B6-C05E-4BF4-A484-F8C6124342CF}"
+          ph="cdp-main"
+          uid="{F0A8B862-C375-4603-B943-8A68DC0B0C73}" />
+        <r
           id="{F8096F74-F536-43E8-83C4-91F422BDAC3F}"
           ph="cdp-main"
           uid="{2044B2A4-FB14-4DF7-9BB0-4A06CA5237A5}" />
