--- a/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Content/sitecorecdp/home/codepage-1.yml
+++ b/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Content/sitecorecdp/home/codepage-1.yml
@@ -5,6 +5,10 @@ Template: "2fcdc739-f535-40cb-af2b-c7edd0b0ddc5"
 Path: "/sitecore/content/sitecorecdp/home/codepage-1"
 DB: master
 SharedFields:
+- ID: "9135200a-5626-4dd8-ab9d-d665b8c11748"
+  Hint: __Never publish
+  Type: checkbox
+  Value: 1
 - ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
   Hint: __Sortorder
   Value: 200
