--- a/SitecoreCDPSln/src/Feature/Components/code/SitecoreCDP.Feature.Components.csproj
+++ b/SitecoreCDPSln/src/Feature/Components/code/SitecoreCDP.Feature.Components.csproj
@@ -276,6 +276,7 @@
     <Compile Include="Controllers\CodeContentController.cs" />
     <Compile Include="Controllers\CodePageController.cs" />
     <Compile Include="Controllers\HomeHeroController.cs" />
+    <Compile Include="Controllers\PurchasePathController.cs" />
     <Compile Include="Controllers\TabContentController.cs" />
     <Compile Include="Models\MainLink.cs" />
     <Compile Include="Models\MainNavigationModel.cs" />
@@ -292,6 +293,7 @@
     <Content Include="Views\CDPNavigation\Index.cshtml" />
     <Content Include="Views\CDPIdentification\GetIdentification.cshtml" />
     <Content Include="Views\CDPPersonProfile\Index.cshtml" />
+    <Content Include="Views\PurchasePath\Index.cshtml" />
     <None Include="Views\web.config" />
     <None Include="Web.config" />
     <None Include="Web.Debug.config">
