--- a/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Templates/sitecorecdp/codepage/__Standard Values.yml
+++ b/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Templates/sitecorecdp/codepage/__Standard Values.yml
@@ -21,9 +21,13 @@ SharedFields:
         id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}"
         l="{FBEE9FC8-9CD8-42EC-B04B-6C7A17B574C6}">
         <r
-          id="{6B8BB8E3-E3E7-41C6-BFBD-AF85C1C7C39B}"
+          id="{E89188B6-C05E-4BF4-A484-F8C6124342CF}"
           ph="cdp-main"
-          uid="{DD5CB57C-42D0-4D78-BC50-67C65EA7EB44}" />
+          uid="{F87A2910-08CB-409D-A980-60B2F97D28D2}" />
+        <r
+          id="{31D6DC4D-0C0B-42A3-AB8C-9F011329E16B}"
+          ph="cdp-main"
+          uid="{EA209CD7-DBD6-4C21-B0F0-B03DF686E2A4}" />
       </d>
     </r>
 Languages:
