Final Changes after training

--- a/SitecoreCDPSln/src/Feature/Components/code/SitecoreCDP.Feature.Components.csproj
+++ b/SitecoreCDPSln/src/Feature/Components/code/SitecoreCDP.Feature.Components.csproj
@@ -273,6 +273,7 @@
     <Compile Include="Controllers\CDPIdentificationController.cs" />
     <Compile Include="Controllers\CDPNavigationController.cs" />
     <Compile Include="Controllers\CDPPersonProfileController.cs" />
+    <Compile Include="Controllers\CDPPIMController.cs" />
     <Compile Include="Controllers\CodeContentController.cs" />
     <Compile Include="Controllers\CodePageController.cs" />
     <Compile Include="Controllers\HomeHeroController.cs" />
@@ -294,6 +295,7 @@
     <Content Include="Views\CDPIdentification\GetIdentification.cshtml" />
     <Content Include="Views\CDPPersonProfile\Index.cshtml" />
     <Content Include="Views\PurchasePath\Index.cshtml" />
+    <Content Include="Views\CDPPIM\Index.cshtml" />
     <None Include="Views\web.config" />
     <None Include="Web.config" />
     <None Include="Web.Debug.config">
