--- a/SitecoreCDPSln/src/Foundation/Serialization/code/App_Config/Include/Unicorn/Unicorn.Configs.Default.config
+++ b/SitecoreCDPSln/src/Foundation/Serialization/code/App_Config/Include/Unicorn/Unicorn.Configs.Default.config
@@ -10,6 +10,7 @@
 						<include name="Renderings" database="master" path="/sitecore/layout/Renderings/Project/sitecorecdp" />
 						<include name="Placeholders" database="master" path="/sitecore/layout/Placeholder Settings/Project/sitecorecdp" />
 						<include name="Content" database="master" path="/sitecore/content/sitecorecdp" />
+						<include name="MediaLibrary" database="master" path="/sitecore/Media Library" />
 					</predicate>
 					<dataProviderConfiguration enableTransparentSync="false" />
 					<syncConfiguration updateLinkDatabase="false" updateSearchIndex="false" />
