--- a/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Content/sitecorecdp/home/approach-beginning/rest-api-overview.yml
+++ b/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Content/sitecorecdp/home/approach-beginning/rest-api-overview.yml
@@ -4,8 +4,16 @@ Parent: "e0e68ff3-aea7-4fc9-b187-8108f834194e"
 Template: "4eee653b-2d07-439e-8358-1da97c3895cb"
 Path: "/sitecore/content/sitecorecdp/home/approach-beginning/rest-api-overview"
 DB: master
+SharedFields:
+- ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
+  Hint: __Sortorder
+  Value: 200
 Languages:
 - Language: en
+  Fields:
+  - ID: "b5e02ad9-d56f-4c41-a065-a133db87bdeb"
+    Hint: __Display name
+    Value: CDP Rest API
   Versions:
   - Version: 1
     Fields:
@@ -13,7 +21,8 @@ Languages:
       Hint: heading
       Value: Overview of Sitecore CDP Stream APIs
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
-      Value: "20220804T162757:637952272779674717Z"
+      Hint: __Created
+      Value: 20220804T073811Z
     - ID: "274023cf-173e-4560-b57f-acd42cc9295b"
       Hint: content
       Value: |
