--- a/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Content/sitecorecdp/home/products/Interstellar.yml
+++ b/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Content/sitecorecdp/home/products/Interstellar.yml
@@ -11,7 +11,7 @@ Languages:
     Fields:
     - ID: "085486cc-cc28-4dec-bd12-ca3d6a7bc9cd"
       Hint: description
-      Value: lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum 
+      Value: lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum lorum ipsum
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
       Value: 20220806T063417Z
@@ -27,7 +27,10 @@ Languages:
       Value: Interstellar
     - ID: "b5ae831c-65e0-41ae-93a8-edbe168ca06a"
       Hint: type
-      Value: BOOK
+      Type: Treelist
+      Value: |
+        {6F1ADCFD-F8D5-4D66-944C-BA2A3E93F82F}
+        {90A38F9A-D050-4749-8C4D-5127DFD50C5A}
     - ID: "e4264c98-be78-4f71-b858-a6be64716b59"
       Hint: currency
       Value: GBP
