CDP Teaser Changes

--- a/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Templates/sitecorecdp/contentpage/__Standard Values.yml
+++ b/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Templates/sitecorecdp/contentpage/__Standard Values.yml
@@ -29,6 +29,10 @@ SharedFields:
           id="{1C626537-5F75-4A2B-8300-E9AA568F5253}"
           ph="cdp-main"
           uid="{70842A7D-97FB-4AA0-BCE3-EEB239D37EA4}" />
+        <r
+          id="{459C2891-ADF0-4B12-9F92-CF10B8FC9E34}"
+          ph="cdp-main"
+          uid="{6B9C5E15-1DA2-4C78-A2CB-50283AB7A2B7}" />
       </d>
     </r>
 Languages:
