--- a/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Content/sitecorecdp/home/products.yml
+++ b/SitecoreCDPSln/src/Foundation/Serialization/unicorn/Content/sitecorecdp/home/products.yml
@@ -4,6 +4,22 @@ Parent: "58a023cd-49d7-458b-ae2f-29acec05a2d7"
 Template: "4eee653b-2d07-439e-8358-1da97c3895cb"
 Path: /sitecore/content/sitecorecdp/home/products
 DB: master
+SharedFields:
+- ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
+  Hint: __Renderings
+  Type: layout
+  Value: |
+    <r xmlns:p="p" xmlns:s="s"
+      p:p="1">
+      <d
+        id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}">
+        <r
+          uid="{6B9C5E15-1DA2-4C78-A2CB-50283AB7A2B7}"
+          s:ccb="Clear on publish"
+          s:ds="{B242383F-16F2-44C5-B2C8-D643190F3101}"
+          s:par="" />
+      </d>
+    </r>
 Languages:
 - Language: en
   Fields:
