--- a/SitecoreCDPSln/src/Foundation/Serialization/code/App_Config/Include/Unicorn/Unicorn.Configs.Default.config
+++ b/SitecoreCDPSln/src/Foundation/Serialization/code/App_Config/Include/Unicorn/Unicorn.Configs.Default.config
@@ -11,6 +11,7 @@
 						<include name="Placeholders" database="master" path="/sitecore/layout/Placeholder Settings/Project/sitecorecdp" />
 						<include name="Content" database="master" path="/sitecore/content/sitecorecdp" />
 						<include name="MediaLibrary" database="master" path="/sitecore/media library/bootcampjssapp" />
+						<include name="Tags" database="master" path="/sitecore/system/Settings/Buckets/ProductTags"/>
 					</predicate>
 					<dataProviderConfiguration enableTransparentSync="false" />
 					<syncConfiguration updateLinkDatabase="false" updateSearchIndex="false" />
